2007-11-14  Matthew Barnes  <mbarnes@redhat.com>

	** Remove trailing whitespace from source code.

2007-11-03  Matthew Barnes  <mbarnes@redhat.com>

	** Remove dead files from source control.  The dates below
	   indicate when the file was removed from Makefile.am.
	   Fixes bug #478680.

	* storage/exchange-delegates-control.h		(May 2004)
	* storage/exchange-delegates-user.c		(Jun 2005)
	* storage/exchange-delegates-user.h		(Jun 2005)
	* storage/exchange-delegates.c			(Jun 2005)
	* storage/exchange-delegates.h			(Jun 2005)
	* storage/exchange-offline-listener.c		(Aug 2005)
	* storage/exchange-offline-listener.h		(Aug 2005)
	* storage/exchange-offline-utils.c		(Dec 2004)
	* storage/exchange-offline-utils.h		(Dec 2004)
	* storage/exchange-permissions-dialog.c		(Jun 2005)
	* storage/exchange-permissions-dialog.h		(Jun 2005)
	* storage/xc-backend-view.c			(Jul 2005)
	* storage/xc-backend-view.h			(Jul 2005)
	* storage/xc-commands.c				(Jul 2005)
	* storage/xc-commands.h				(Jul 2005)

2007-10-29  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.21.1 release.

2007-10-26  Matthew Barnes  <mbarnes@redhat.com>

	* docs/reference/Makefile.am:
	Change the DOC_MODULE to "evolution-exchange".

	* docs/reference:
	Rename "ximian-connector" files to "evolution-exchange".

2007-09-28  Matthew Barnes  <mbarnes@redhat.com>

	* docs/reference: Remove e2k-encoding-utils section.

2007-09-27  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #474000

	* camel/camel-exchange-folder.c (find_parent):
	Use GLib's Base64 API instead of Camel's.

2007-09-17  Srinivasa Ragavan <sragavan@novell.com>

	* NEW, configure.in: Evolution Exchange 2.12 release

2007-09-17  Matthew Barnes  <mbarnes@redhat.com>

	* addressbook/e-book-backend-gal.c (start_book_view):
	* calendar/e-cal-backend-exchange.c:
	Fix recently introduced compiler warnings.

2007-09-10  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #295646 (Novell Bugzilla)
